--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,9 @@ pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.5
+PyWavelets==1.3.0
+pywin32==304
+pywinpty==2.0.8
 pyzmq==24.0.1
 qtconsole==5.3.2
 QtPy==2.2.1
@@ -118,6 +121,7 @@ tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
+tensorflow_intel==2.10.0
 termcolor==2.0.1
 terminado==0.16.0
 testpath==0.6.0
